k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: quicknotes
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
